# tokenbbq

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-23-dashboard-improvements.md  2026-04-30-codex-rate-limits-pill-toggle.md
docs/superpowers/specs/: 2026-04-23-dashboard-improvements-design.md
scripts/: inline-dashboard-icon.mjs  run-tests.mjs
src/: aggregator.test.ts  aggregator.ts  dashboard.ts  event-merge.test.ts  event-merge.ts  index.ts  platform-paths.ts  pricing.test.ts  pricing.ts  project.test.ts  project.ts  server.ts  store.test.ts  store.ts  types.ts  watcher.ts
src/loaders/: amp.ts  claude.ts  codex.test.ts  codex.ts  gemini.ts  index.ts  opencode.ts  pi.ts
src/loaders/__fixtures__/: README.md  codex-rate-limits-sample.jsonl
widget/: index.html  package-lock.json  package.json
widget/src/: main.ts  source-toggle.ts  styles.css  types.ts  ui.ts
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: api_types.rs  commands.rs  lib.rs
